--- a/Exercise-Files/Ch07/07_01/start/react-essentials/package.json
+++ b/Exercise-Files/Ch07/07_01/start/react-essentials/package.json
@@ -2,13 +2,16 @@
   "name": "react-essentials",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
+    "history": "^5.3.0",
+    "react": "^18.0.0",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
