--- a/Exercise-Files/Ch07/07_03/start/react-essentials/package.json
+++ b/Exercise-Files/Ch07/07_03/start/react-essentials/package.json
@@ -10,8 +10,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^6.0.0-beta.0",
-    "react-router-dom": "^6.0.0-beta.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.2",
+    "route": "^0.2.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
